# servers/core/docs/swagger.json
@@ -3126,6 +3126,32 @@
                 }
             }
         },
+        "applicationDTO.AnswerFileUpload": {
+            "type": "object",
+            "properties": {
+                "applicationQuestionID": {
+                    "type": "string"
+                },
+                "courseParticipationID": {
+                    "type": "string"
+                },
+                "fileID": {
+                    "type": "string"
+                },
+                "fileName": {
+                    "type": "string"
+                },
+                "fileSize": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "uploadedAt": {
+                    "type": "string"
+                }
+            }
+        },
         "applicationDTO.AnswerMultiSelect": {
             "type": "object",
             "properties": {
@@ -3169,6 +3195,12 @@
         "applicationDTO.Application": {
             "type": "object",
             "properties": {
+                "answersFileUpload": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/applicationDTO.AnswerFileUpload"
+                    }
+                },
                 "answersMultiSelect": {
                     "type": "array",
                     "items": {
@@ -3180,6 +3212,9 @@
                     "items": {
                         "$ref": "#/definitions/applicationDTO.AnswerText"
                     }
+                },
+                "id": {
+                    "type": "string"
                 },
                 "status": {
                     "$ref": "#/definitions/applicationDTO.StatusEnum"
@@ -3209,6 +3244,17 @@
                 },
                 "student": {
                     "$ref": "#/definitions/studentDTO.Student"
+                }
+            }
+        },
+        "applicationDTO.CreateAnswerFileUpload": {
+            "type": "object",
+            "properties": {
+                "applicationQuestionID": {
+                    "type": "string"
+                },
+                "fileID": {
+                    "type": "string"
                 }
             }
         },
@@ -3454,6 +3500,12 @@
         "applicationDTO.PostApplication": {
             "type": "object",
             "properties": {
+                "answersFileUpload": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/applicationDTO.CreateAnswerFileUpload"
+                    }
+                },
                 "answersMultiSelect": {
                     "type": "array",
                     "items": {
